--- a/.github/workflows /image_builder.yml
+++ b/.github/workflows /image_builder.yml
@@ -6,41 +6,38 @@ on:
       custom_tag:
         description: 'Tag for manual build.'
         required: false
-  release:
-    types: [published]
   push: 
-    branches:
-      - docker-images
+    branches: [ "main" ]
 
 
 jobs:
-    build-and-push:
-        runs-on: ubuntu-latest
-        steps:
-         - name: Checkout repository
-           uses: actions/checkout@v3
-    
-         - name: Set up QEMU
-           uses: docker/setup-qemu-action@v2
-           with:
-            platforms: all
-    
-         - name: Set up Docker Buildx
-           uses: docker/setup-buildx-action@v2
-    
-         - name: Log in to GitHub Container Registry
-           uses: docker/login-action@v2
-           with:
-              registry: ghcr.io
-              username: ${{ github.actor }}
-              password: ${{ secrets.github_token }}
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-         - name: Build and push building image
-           uses: docker/build-push-action@v4
-           with:
-              context: .
-              file: ./Dockerfile
-              platforms: linux/amd64,linux/arm64
-              push: true
-              tags: |
-               ghcr.io/testwl12/building-image:latest
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+        platforms: all
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.github_token }}
+
+      - name: Build and push building image
+        uses: docker/build-push-action@v4
+        with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: |
+          ghcr.io/testwl12/building-image:latest
